--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,17 +8,17 @@
         @foreach (var e in Model)
         {
 
-            var photoPath = "~/images/" + (e.PhotoPath ?? "noimage.jpg");
+            var photoPath = "/images/" + (e.PhotoPath ?? "noimage.jpg");
 
-            <div class="card m-3">
+            <div class="card m-3" style="min-width: 18rem; max-width:30.5%;">
                 <div class="card-header">
                     <h3>@e.Name</h3>
                 </div>
                 <img class="card-img-top imgThumbnail" src ="@photoPath" asp-append-version="true" />
                 <div class="card-footer text-center">
-                    <a href="#" class="btn btn-primary">View</a>
-                    <a href="#" class="btn btn-primary">Edit</a>
-                    <a href="#" class="btn btn-danger">Delete</a>
+                    <a href="#" class="btn btn-primary m-1">View</a>
+                    <a asp-controller="home" asp-action="details" asp-route-id="@e.Id" class="btn btn-primary m-1">Edit</a>
+                    <a href="#" class="btn btn-danger m-1">Delete</a>
                 </div>
             </div>
         }
