--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -14,10 +14,10 @@
                 <div class="card-header">
                     <h3>@e.Name</h3>
                 </div>
-                <img class="card-img-top imgThumbnail" src ="@photoPath" asp-append-version="true" />
+                <img class="card-img-top imageThumbnail" src ="@photoPath" asp-append-version="true" />
                 <div class="card-footer text-center">
-                    <a href="#" class="btn btn-primary m-1">View</a>
-                    <a asp-controller="home" asp-action="details" asp-route-id="@e.Id" class="btn btn-primary m-1">Edit</a>
+                    <a asp-controller="home" asp-action="details" asp-route-id="@e.Id" class="btn btn-primary m-1">View</a>
+                    <a asp-controller="home" asp-action="edit" asp-route-id="@e.Id" class="btn btn-primary m-1">Edit</a>
                     <a href="#" class="btn btn-danger m-1">Delete</a>
                 </div>
             </div>
