--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -70,7 +70,7 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
-.imgThumbnail {
+.imageThumbnail {
     height: 200px;
     width: auto;
 }
