thru 90; deleting roles wo users

--- a/Views/Shared/Error.cshtml
+++ b/Views/Shared/Error.cshtml
@@ -1,10 +1,10 @@
 ﻿@if (ViewBag.ErrorTitle == null)
 {
     <h3>
-        An error occured while processing your request.
+        An error occurred while processing your request.
         The support team is notified and we are working on the fix
     </h3>
-    <h5>Please contact us on pragim@pragimtech.com</h5>
+    <h5>Please contact me</h5>
 }
 else
 {
