--- a/Views/Administration/ListRoles.cshtml
+++ b/Views/Administration/ListRoles.cshtml
@@ -9,6 +9,10 @@
 
 @if (Model.Any())
 {
+
+    <a class="btn btn-primary mb-3" style="width:auto" asp-action="CreateRole"
+       asp-controller="administration">Add new role</a>
+
     foreach (var role in Model)
     {
 
@@ -19,10 +23,27 @@
             <div class="card-body">
                 <h5 class="card-title">@role.Name</h5>
             </div>
-            <div class="card-footer">
-                <a class="btn btn-primary" asp-action="EditRole" asp-controller="Administration" asp-route-id="@role.Id">Edit</a>
-                <a class="btn btn-primary" asp-action="EditRole" asp-controller="Administration" asp-route-id="@role.Id">Delete</a>
-            </div>
+            <form asp-action="DeleteRole" asp-route-id="@role.Id" method="post">
+
+                @if (1 == 1)
+                {
+                    <a class="btn btn-primary" asp-action="EditRole"
+                       asp-controller="Administration" asp-route-id="@role.Id">
+                        Edit
+                    </a>
+                }
+                <span id="confirmDeleteSpan_@role.Id" style="display:none">
+                    <span>Are you sure you want to delete?</span>
+                    <button type="submit" class="btn btn-danger">Yes</button>
+                    <a href="#" class="btn btn-primary"
+                       onclick="confirmDelete('@role.Id', false)">No</a>
+                </span>
+
+                <span id="deleteSpan_@role.Id">
+                    <a href="#" class="btn btn-danger"
+                       onclick="confirmDelete('@role.Id', true)">Delete</a>
+                </span>
+            </form>
         </div>
     }
 
@@ -43,4 +64,8 @@ else
             </a>
         </div>
     </div>
+}
+
+@section Scripts {
+    <script src="~/js/CustomScript.js"></script>
 }
