thru 96 update access using policies

--- a/Views/Administration/ListRoles.cshtml
+++ b/Views/Administration/ListRoles.cshtml
@@ -1,6 +1,10 @@
 ﻿
 @model IEnumerable<IdentityRole>
 
+@using  Microsoft.AspNetCore.Authorization
+
+@inject IAuthorizationService authorizationService;
+
 @{
     ViewBag.Title = "All Roles";
 }
@@ -25,25 +29,28 @@
             </div>
             <form asp-action="DeleteRole" asp-route-id="@role.Id" method="post">
 
-                @if (1 == 1)
+                @if ((await authorizationService.AuthorizeAsync(User, "EditRolePolicy")).Succeeded)
                 {
                     <a class="btn btn-primary" asp-action="EditRole"
                        asp-controller="Administration" asp-route-id="@role.Id">
                         Edit
                     </a>
                 }
-                <span id="confirmDeleteSpan_@role.Id" style="display:none">
-                    <span>Are you sure you want to delete?</span>
-                    <button type="submit" class="btn btn-danger">Yes</button>
-                    <a href="#" class="btn btn-primary"
-                       onclick="confirmDelete('@role.Id', false)">No</a>
-                </span>
+                @if ((await authorizationService.AuthorizeAsync(User, "DeleteRolePolicy")).Succeeded)
+                {
+                    <span id="confirmDeleteSpan_@role.Id" style="display:none">
+                        <span>Are you sure you want to delete?</span>
+                        <button type="submit" class="btn btn-danger">Yes</button>
+                        <a href="#" class="btn btn-primary"
+                           onclick="confirmDelete('@role.Id', false)">No</a>
+                    </span>
 
-                <span id="deleteSpan_@role.Id">
-                    <a href="#" class="btn btn-danger"
-                       onclick="confirmDelete('@role.Id', true)">Delete</a>
-                </span>
-            </form>
+                    <span id="deleteSpan_@role.Id">
+                        <a href="#" class="btn btn-danger"
+                           onclick="confirmDelete('@role.Id', true)">Delete</a>
+                    </span>
+                }
+                </form>
         </div>
     }
 
