--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -48,8 +48,8 @@
                     <li class="nav-item">
                         <a asp-action="create" asp-controller="home" class="nav-link">Create</a>
                     </li>
-                    @*@if (signInManager.IsSignedIn(User) && User.IsInRole("Admin"))
-                    {*@
+                    @if (signInManager.IsSignedIn(User) && User.IsInRole("Admin"))
+                    {
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -64,7 +64,7 @@
                                asp-action="ChangePassword">Password</a>
                         </div>
                     </li>
-                    @*}*@
+                    }
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     @if (signInManager.IsSignedIn(User))
